# ternary_diagram

./: .buildinfo  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements-developper.txt  requirements.txt  search.html  searchindex.js  setup.py  ternary_diagram.html
.doctrees/: environment.pickle  index.doctree  modules.doctree  ternary_diagram.doctree
.github/: dependabot.yml  release.yml
.github/workflows/: CI.yml  docs.yml  pytest-on-each-version.yml  release-pypi.yml
_sources/: index.rst.txt  modules.rst.txt  ternary_diagram.rst.txt
docker/: run.sh  stop.sh
docs/: .buildinfo  LICENSE.html  README.html  README.md  genindex.html  index.html  install.html  modules.html  modules.rst  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html  ternary_diagram.html  ternary_diagram.ternary_diagram.html  ternary_diagram.utils.html
docs/.doctrees/: LICENSE.doctree  README.doctree  environment.pickle  index.doctree  install.doctree  modules.doctree  setup.doctree  ternary_diagram.doctree  ternary_diagram.ternary_diagram.doctree  ternary_diagram.utils.doctree
docs/_build/: index.html
docs/_sources/: LICENSE.md.txt  README.md.txt  index.rst.txt  install.md.txt  ternary_diagram.rst.txt
docs/_static/: documentation_options.js
docs/autoapi/: index.html
docs/source/: conf.py  index.rst
docs_src/: README.md  conf.py  ternary_diagram.rst  ternary_diagram.ternary_diagram.rst  ternary_diagram.utils.rst
docs_src/_templates/: layout.html
docs_src/source/: README.md  conf.py  index.rst  ternary_diagram.rst
example/contour/: example_contour.csv  example_contour.ipynb
example/example_on_readme/: example_on_readme.ipynb
example/mono_scatter/: example_mono_scatter.csv  example_mono_scatter.ipynb
gui/: main.py
src/: main.py
ternary_diagram/: __init__.py  _test.py  ternary_diagram.py  test.py  utils.py
ternary_diagram_gui/: setup.py
tests/: TODO.md  _deprecated_test.py  _test.py  test_contour.py  test_mono_scatter.py  test_scatter.py
(+26 files in other folders)
